--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,7 +118,7 @@
   * {
     @apply border-border outline-ring/50;
   }
-  body {
+  body, html {
     @apply bg-background text-foreground font-sans;
   }
 }
